<resources>
    <string name="app_name">EFoodSaver</string>
    <string name="web_client_id">210927889915-63bllp7lsm626ri8abcof1lm9443eckq.apps.googleusercontent.com</string>
    <string name="facebook_app_id">259320543452660</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">1c9f70fe3da4059ffddb745e31692129</string>
    <string name="search">Search</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommended_products">Recommended Products</string>
    <string name="my_cart_list">My Cart List</string>
    <string name="product_name">Product Name</string>
    <string name="rating">Rating</string>
    <string name="description">Description</string>
    <string name="comment">Comment</string>
    <string name="reviews">Reviews</string>
    <string name="lkr_600">/LKR 600</string>
    <string name="_40_off">40% OFF</string>
    <string name="_2023_10_13">2023/10/13</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_now">Buy now</string>
    <string name="username">Username</string>
    <string name="still_processing">Still Processing, Please Wait…</string>
    <string name="add_some_item_to_cart">Add Some Item To Cart..</string>
    <string name="view_the_product">View The Product</string>
    <string name="remove_the_product">Remove The Product</string>
    <string name="product_search">Product Search</string>
    <string name="no_result_found_on_this_topic">No Result Found On this Topic</string>
    <string name="eg_sandun">Eg: Sandun</string>
    <string name="last_name">Last Name</string>
    <string name="select_location_map_id">d8e13c59a45eff9d</string>
    <string name="select_your_location">Select Your Location</string>
</resources>