<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/single_product_parent_lo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingleProductFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="category/type"
                android:textAllCaps="true"
                android:textColor="@color/green"
                android:textSize="11dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="10dp">

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/single_product_img_slider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:iss_auto_cycle="false"
                    app:iss_corner_radius="10"
                    app:iss_delay="1000"
                    app:iss_error_image="@drawable/loading"
                    app:iss_period="1000"
                    app:iss_title_background="@drawable/loading" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/product_name"
                    android:textSize="23sp" />

                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/selected_star" />

                <TextView
                    android:id="@+id/product_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/mfg_date_icon" />

                    <TextView
                        android:id="@+id/mfg_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="2023/10/13" />
                </LinearLayout>

                <TextView
                    android:id="@+id/qty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_weight="1"
                    android:text="6 Available"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/exg_date_icon" />

                    <TextView
                        android:id="@+id/exg_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_2023_10_13" />
                </LinearLayout>

                <TextView
                    android:id="@+id/discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_weight="1"
                    android:text="@string/_40_off"
                    android:textAlignment="textEnd"
                    android:textAllCaps="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="end">

                <TextView
                    android:id="@+id/real_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="LKR 1000"
                    android:textColor="@color/dark_light_ash" />

                <TextView
                    android:id="@+id/price_with_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/lkr_600"
                    android:textColor="@color/green"
                    android:textSize="22dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:textColor="@color/dark_light_ash" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingTop="7dp"
                android:paddingRight="10dp"
                android:paddingBottom="7dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:backgroundTint="?attr/colorSecondary"
                    app:cardCornerRadius="25dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/normal_person_24" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="Username"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/review_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/reviews"
                android:textSize="22sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="?attr/colorSecondary"
                app:cardCornerRadius="10dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/review_contaciner"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </androidx.cardview.widget.CardView>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/recommended_product_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="55dp"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/single_product_add_to_cart"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/add_to_cart" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/single_product_buy_now"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/buy_now" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>